fix(list view): waiting cloak width on small screen

--- a/_sass/_root_page.scss
+++ b/_sass/_root_page.scss
@@ -607,7 +607,8 @@ $look-search-shadow-width: 100px;
   }
 
   @media (max-width: $screen-sm-min) {
-    width: $screen-xs - $side-width;
+    left: 0;
+    width: calc(100% - #{$side-width});
   }
 
   @media (max-width: $screen-xs-min) {
